--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.2.7
 certifi==2020.4.5.1
 chardet==3.0.4
+decorator==4.4.2
 Django==3.0.6
 entrypoints==0.3
 flake8==3.7.9
 idna==2.9
+jsonpath-ng==1.5.1
 mccabe==0.6.1
+ply==3.11
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pytz==2020.1
 requests==2.23.0
+six==1.14.0
 sqlparse==0.3.1
 urllib3==1.25.9
